--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -203,8 +203,21 @@ img{
   z-index: 3;
   margin:0px 0;
   right:20px;
+  top:217px;
+  height:496px;
+}
+
+.filter-container{
+  border: 1px solid #9b9b9b;
+  overflow-y: auto;
+  padding: 10px;
+  background: rgb(255, 255, 186);
+  position:fixed;
+  z-index: 3;
+  margin:0px 0;
+  right:20px;
   top:42px;
-  height:671px;
+  height:175px;
 }
 
 .note-format{
@@ -539,7 +552,7 @@ h2{
   background-color:white;
 }
 .clear-button:hover{
-  background-color: #c1c1c1;
+  background-color: #e3e3e3;
 }
 
 .filter-icon{
