--- a/app/scripts/templates/note.html
+++ b/app/scripts/templates/note.html
@@ -4,9 +4,9 @@
     (note.category === 'details' && !baseline ? 'note-details' :
     (note.category === 'questions' && !baseline ? 'note-questions' :
     (note.category === 'other' && !baseline ? 'note-other' : 'baseline-content')))))">
-    <button ng-click="deleteIt(note.id)" class="plain-button delete-button">DELETE</button>
+    <button ng-if="note.contributor==user.name" ng-click="deleteIt(note.id)" class="plain-button delete-button">DELETE</button>
     <button class="rating-button" ng-click="rateIt(note.id)" tooltip="recommend"></button>
-    <div class="note-contributor">Submitted by {{note.contributor}} -</div>
+    <div class="note-contributor">Submitted by {{note.contributor}}</div>
     <div class="date">{{note.dateSubmitted}}<br></div>
     <div ng-if="note.category === 'methods'">Note relevant for: {{note.extra_info}}</div>
     <div ng-if="note.category === 'other'">Note category: {{note.extra_info}}</div>
@@ -23,7 +23,8 @@
                 Reply
         </button>
         <button class="plain-button show-step-button"
-                ng-click="showList(note)">
+                ng-click="showList(note)"
+                ng-if="!wholeTutorial">
             show steps
         </button>
         <div class="note-rating">
@@ -31,6 +32,6 @@
             <div ng-if="note.rating==1">{{note.rating}} person found this note helpful.</div>
             <div ng-if="note.rating<1">Not rated yet.</div>
         </div>
-        <note ng-repeat="reply in note.replies" ng-if="note.replies.length > 0 && canShowNote(reply)" note="reply" delete-it = "deleteIt" rate-it = "rateIt" add-reply="addReply" can-show-note="canShowNote" baseline="baseline" show-list="showList"></note>
+        <note ng-repeat="reply in note.replies" ng-if="note.replies.length > 0 && canShowNote(reply)" note="reply" delete-it = "deleteIt" rate-it = "rateIt" add-reply="addReply" can-show-note="canShowNote" baseline="baseline" show-list="showList" user="user" whole-tutorial="wholeTutorial"></note>
     </div>
 </div>
