--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -53,7 +53,6 @@ img{
   content : attr(tooltip);
   opacity : 0;
   position : absolute;
-
   background-color: #000;
   border-radius: 10px;
   color: #fff;
@@ -62,11 +61,11 @@ img{
   padding: 5px;
   pointer-events: none;
   transition: all 0.1s ease;
+  white-space: nowrap;
 }
 
 [tooltip]:hover:before {
   opacity : 1;
-  /*transition-delay: 0.5s;*/
   white-space: nowrap;
 }
 
@@ -201,8 +200,6 @@ img{
   padding: 10px;
   background: rgb(255, 255, 186);
   position:fixed;
-  z-index: 3;
-  margin:0px 0;
   right:20px;
   top:217px;
   height:496px;
@@ -214,8 +211,6 @@ img{
   padding: 10px;
   background: rgb(255, 255, 186);
   position:fixed;
-  z-index: 3;
-  margin:0px 0;
   right:20px;
   top:42px;
   height:175px;
@@ -381,7 +376,6 @@ h2{
   color:darkgrey;
   margin-left:15px;
   float:left;
-  outline:none;
 }
 
 .categories-title{
@@ -416,6 +410,11 @@ h2{
 
 .close-button{
   font-size: 0.8em;
+}
+
+.reply-close{
+  float:right;
+  margin-bottom:20px;
 }
 
 .return-button-first{
