changed vote icon

--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -450,10 +450,10 @@ h2{
 }
 
 .rating-button{
-  background-image: url(../images/PNG/upvote);
+  background-image: url(../images/PNG/thumbs-up.png);
   background-position: 6px 3px;
   background-repeat: no-repeat;
-  background-size: 20px;
+  background-size: 25px;
   height: 28px;
   line-height: 9px;
   width: 35px;
