switched the add note and category icons

--- a/app/scripts/templates/note.html
+++ b/app/scripts/templates/note.html
@@ -35,7 +35,7 @@
         <div class="note-steps">
             <div ng-if="note.step_id.length>1">{{note.step_id.length}} Associated Steps</div>
             <div ng-if="note.step_id.length==1">{{note.step_id.length}} Associated Step</div>
-            <div ng-if="note.step_id.length<1"> No Step</div>
+            <div ng-if="note.step_id.length<1"> No Associated Step</div>
         </div>
         <note ng-repeat="reply in note.replies" ng-if="note.replies.length > 0 && canShowNote(reply)" note="reply" delete-it = "deleteIt" rate-it = "rateIt" add-reply="addReply" can-show-note="canShowNote" baseline="baseline" show-list="showList" user="user" whole-tutorial="wholeTutorial" date="date"></note>
     </div>
