--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -215,10 +215,6 @@ img{
   height:175px;
 }
 
-.note-format{
-  z-index:2;
-}
-
 .description{
   border: 1px #ccc dotted;
   margin: 5px 0;
@@ -496,6 +492,10 @@ h2{
   height: 20px;
   line-height: 9px;
   width: 10px;
+}
+
+.icon-bar{
+  margin:3px 10px;
 }
 
 .preview-button{
