--- a/app/scripts/templates/note.html
+++ b/app/scripts/templates/note.html
@@ -28,14 +28,15 @@
             show steps
         </button>
         <div class="note-rating">
-            <div ng-if="note.rating>1">{{note.rating}} people found this note helpful.</div>
-            <div ng-if="note.rating==1">{{note.rating}} person found this note helpful.</div>
+            <div ng-if="note.rating>1">{{note.rating}} people found this helpful.</div>
+            <div ng-if="note.rating==1">{{note.rating}} person found this helpful.</div>
             <div ng-if="note.rating<1">Not rated yet.</div>
         </div>
         <div class="note-steps">
             <div ng-if="note.step_id.length>1">{{note.step_id.length}} Associated Steps</div>
-            <div ng-if="note.step_id.length==1">{{note.step_id.length}} Associated Step</div>
+            <div ng-if="note.step_id.length==1 && !wholeTutorial">{{note.step_id.length}} Associated Step</div>
             <div ng-if="note.step_id.length<1"> No Associated Step</div>
+            <div ng-if="wholeTutorial">Whole Tutorial</div>
         </div>
         <note ng-repeat="reply in note.replies" ng-if="note.replies.length > 0 && canShowNote(reply)" note="reply" delete-it = "deleteIt" rate-it = "rateIt" add-reply="addReply" can-show-note="canShowNote" baseline="baseline" show-list="showList" user="user" whole-tutorial="wholeTutorial" date="date"></note>
     </div>
