smaller icons in filter box

--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -45,6 +45,21 @@ img{
   position: relative;
 }
 
+.filter-icon{
+  background-repeat: no-repeat;
+  background-size: 14px;
+  outline:none;
+  border-radius: 20px;
+  height: 15px;
+  line-height: 9px;
+  width: 15px;
+  position: relative;
+}
+
+.filter-icon:hover{
+  border:none;
+}
+
 .selected, .icon:hover{border:none;}
 .icon:focus {outline:0;}
 
@@ -100,11 +115,40 @@ img{
   background-position: 0px 2px;
 }
 
-.selected-details, .note-details, .icon-details:hover{background-color: #DEE9FF;}
-.selected-corrections, .note-corrections, .icon-corrections:hover{background-color: #fdafd9;z-index:1;}
-.selected-methods, .note-methods, .icon-methods:hover{background-color: #ffdfa5;}
-.selected-questions, .note-questions, .icon-questions:hover{background-color: #edbcf9;}
-.selected-other, .note-other, .icon-other:hover{background-color: #d4ffd1;}
+.filter-icon-details{
+  background-image: url(../images/PNG/pin.png);
+  background-size: 14px;
+  //background-position: 0px 0px;
+}
+
+.filter-icon-corrections{
+  background-image: url(../images/PNG/healing.png);
+  //background-position: 0px;
+}
+
+.filter-icon-methods{
+  background-image: url(../images/PNG/method.png);
+  background-size: 13px;
+  //background-position: 0px 0px;
+}
+
+.filter-icon-questions{
+  background-image: url(../images/PNG/question.png);
+  background-size: 13px;
+  //background-position: 0px 0px;
+}
+
+.filter-icon-other{
+  background-image: url(../images/PNG/other.png);
+  background-size: 17px;
+  //background-position: 0px 0px;
+}
+
+.selected-details, .note-details,.filter-icon-details:hover, .icon-details:hover{background-color: #DEE9FF;}
+.selected-corrections, .note-corrections,.filter-icon-corrections:hover, .icon-corrections:hover{background-color: #fdafd9;z-index:1;}
+.selected-methods, .note-methods, .filter-icon-methods:hover, .icon-methods:hover{background-color: #ffdfa5;}
+.selected-questions, .note-questions, .filter-icon-questions:hover, .icon-questions:hover{background-color: #edbcf9;}
+.selected-other, .note-other,.filter-icon-other:hover, .icon-other:hover{background-color: #d4ffd1;}
 
 .note:before{
   background-color: #fff;
@@ -587,10 +631,6 @@ h2{
 }
 .clear-button:hover{
   background-color: #e3e3e3;
-}
-
-.filter-icon{
-  border:none;
 }
 
 .filter-button:hover{
