small design fixes

--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -84,7 +84,7 @@ img{
   white-space: nowrap;
 }
 
-.selected-step{background-color: #f6ffa4;}
+.selected-step{background-color: #c4fff4;}
 
 .icon-details{
   background-image: url(../images/PNG/pin.png);
@@ -482,12 +482,12 @@ h2{
 }
 
 .return-button-first{
-  margin-left:95px;
+  margin-left:65px;
   margin-right:10px;
 }
 
 .return-button-second{
-  margin-left:111.5px;
+  margin-left:81.4px;
   margin-right:10px;
 }
 
