--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -84,7 +84,7 @@ img{
   white-space: nowrap;
 }
 
-.selected-step{background-color: #c4fff4;}
+.selected-step{background-color: rgba(131, 41, 255, 0.33);}
 
 .icon-details{
   background-image: url(../images/PNG/pin.png);
@@ -248,7 +248,7 @@ img{
   position:fixed;
   right:20px;
   top:176px;
-  height:536px;
+  height:465px;
 }
 
 .filter-container{
@@ -534,8 +534,8 @@ h2{
   color:grey;
 }
 
-.disabledSteps{
-  color: lightgrey;
+.disabled-steps{
+  background-color: #cccccc;
 }
 
 .menu-action-button{
@@ -554,6 +554,10 @@ h2{
 
 .menu-action-button:hover{
   background-color: #e6d4e2;
+}
+
+.menu-action-button:disabled{
+  background-color: #cccccc;
 }
 
 .selected-menu-button{
