general fixes and general grey out

--- a/app/scripts/templates/note.html
+++ b/app/scripts/templates/note.html
@@ -33,9 +33,11 @@
             <div ng-if="note.rating<1">Not rated yet.</div>
         </div>
         <div class="note-steps">
-            <div ng-if="note.step_id.length>1">{{note.step_id.length}} Associated Steps</div>
-            <div ng-if="note.step_id.length==1 && !general">{{note.step_id.length}} Associated Step</div>
-            <div ng-if="note.step_id.length<1"> No Associated Step</div>
+            <div ng-if="note.step_id.length>=1 && !general">Steps:{{note.step_id[0]}} </div>
+            <div ng-if="note.step_id.length>=2">, {{note.step_id[1]}}</div>
+            <div ng-if="note.step_id.length>=3">, {{note.step_id[2]}}</div>
+            <div ng-if="note.step_id.length>3">+</div>
+            <div ng-if="note.step_id.length<1 && !general"> No Associated Step</div>
             <div ng-if="general">General</div>
         </div>
         <note ng-repeat="reply in note.replies" ng-if="note.replies.length > 0 && canShowNote(reply)" note="reply" delete-it = "deleteIt" rate-it = "rateIt" add-reply="addReply" can-show-note="canShowNote" baseline="baseline" show-list="showList" user="user" general="general" date="date"></note>
