--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -512,6 +512,9 @@ h2{
 .note-steps{
   font-size: 0.6em;
 }
+.first-note-step{
+  float:left;
+}
 
 .rating-button{
   background-image: url(../images/PNG/thumbs-up.png);
