--- a/app/scripts/templates/note.html
+++ b/app/scripts/templates/note.html
@@ -22,24 +22,21 @@
             ng-if="baseline">
                 Reply
         </button>
-        <button class="plain-button show-step-button"
-                ng-click="showList(note)"
-                ng-if="!general">
-            show steps
-        </button>
+        <button class="plain-button show-step-button" ng-click="showList(note)" ng-if="!general && !currentNote">show steps</button>
+        <button class="plain-button show-step-button" ng-click="showList(note)" ng-if="!general && currentNote">hide steps</button>
         <div class="note-rating">
             <div ng-if="note.rating>1">{{note.rating}} people found this helpful.</div>
             <div ng-if="note.rating==1">{{note.rating}} person found this helpful.</div>
             <div ng-if="note.rating<1">Not rated yet.</div>
         </div>
         <div class="note-steps">
-            <div ng-if="note.step_id.length>=1 && !general">Steps:{{note.step_id[0]}} </div>
-            <div ng-if="note.step_id.length>=2">, {{note.step_id[1]}}</div>
-            <div ng-if="note.step_id.length>=3">, {{note.step_id[2]}}</div>
+            <div ng-if="note.step_id.length>=1 && !general" ng-class="{'first-note-step':note.step_id.length>=2}">Steps:{{note.step_id[0]}} </div>
+            <div ng-if="note.step_id.length>=2" ng-class="{'first-note-step':note.step_id.length>=3}">, {{note.step_id[1]}}</div>
+            <div ng-if="note.step_id.length>=3" ng-class="{'first-note-step':note.step_id.length>3}">, {{note.step_id[2]}}</div>
             <div ng-if="note.step_id.length>3">+</div>
             <div ng-if="note.step_id.length<1 && !general"> No Associated Step</div>
             <div ng-if="general">General</div>
         </div>
-        <note ng-repeat="reply in note.replies" ng-if="note.replies.length > 0 && canShowNote(reply)" note="reply" delete-it = "deleteIt" rate-it = "rateIt" add-reply="addReply" can-show-note="canShowNote" baseline="baseline" show-list="showList" user="user" general="general" date="date"></note>
+        <note ng-repeat="reply in note.replies" ng-if="note.replies.length > 0 && canShowNote(reply)" note="reply" delete-it = "deleteIt" rate-it = "rateIt" add-reply="addReply" can-show-note="canShowNote" baseline="baseline" show-list="showList" user="user" general="general" date="date" current-note="currentNote"></note>
     </div>
 </div>
