--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -273,15 +273,13 @@ img{
 }
 
 .sort{
-  width:145px;
-  right:263px;
+  right:calc(20% + 20px);
 }
 
 .filter{
-  width:255px;
   right:20px;
+  float:right;
 }
-
 .description{
   border: 1px #ccc dotted;
   margin: 5px 0;
