--- a/app/scripts/templates/note.html
+++ b/app/scripts/templates/note.html
@@ -8,8 +8,8 @@
     <button class="rating-button" ng-click="rateIt(note.id)" tooltip="recommend"></button>
     <div class="note-contributor">Submitted by {{note.contributor}}</div>
     <div class="date">{{date}}<br></div>
-    <div ng-if="note.category === 'methods'">Note relevant for: {{note.extra_info}}</div>
-    <div ng-if="note.category === 'other'">Note category: {{note.extra_info}}</div>
+    <div class="note-content" ng-if="note.category === 'methods'">Note relevant for: {{note.extra_info}}</div>
+    <div class="note-content" ng-if="note.category === 'other'">Note category: {{note.extra_info}}</div>
     <div class="note-content">{{note.content}}</div>
     <div class="comment-footer">
         <button class="plain-button reply-button"
