--- a/app/scripts/templates/note.html
+++ b/app/scripts/templates/note.html
@@ -4,9 +4,15 @@
     (note.category === 'details' && !baseline ? 'note-details' :
     (note.category === 'questions' && !baseline ? 'note-questions' :
     (note.category === 'other' && !baseline ? 'note-other' : 'baseline-content')))))">
-    <button ng-if="note.contributor==user.name" ng-click="deleteIt(note.id)" class="plain-button delete-button">DELETE</button>
-    <button class="rating-button" ng-click="rateIt(note.id)" tooltip="recommend"></button>
-    <div class="note-contributor">Submitted by {{note.contributor}}</div>
+    <button class="plain-button show-step-button" ng-click="showList(note)" ng-if="!general && !currentNote">show steps</button>
+    <button class="plain-button show-step-button" ng-click="showList(note)" ng-if="!general && currentNote">hide steps</button>
+    <div class="note-steps">
+        <div ng-if="notelist.length>=1 && !general" >Steps: {{notelist}}</div>
+        <div ng-if="notelist.length<1 && !general"> No Associated Step</div>
+        <div ng-if="general">General</div>
+    </div>
+    <div class="note-contributor">{{note.category}}•</div>
+    <div class="note-contributor">Submitted by {{note.contributor}}•</div>
     <div class="date">{{date}}<br></div>
     <div class="note-content" ng-if="note.category === 'methods'">Note relevant for: {{note.extra_info}}</div>
     <div class="note-content" ng-if="note.category === 'other'">Note category: {{note.extra_info}}</div>
@@ -22,21 +28,14 @@
             ng-if="baseline">
                 Reply
         </button>
-        <button class="plain-button show-step-button" ng-click="showList(note)" ng-if="!general && !currentNote">show steps</button>
-        <button class="plain-button show-step-button" ng-click="showList(note)" ng-if="!general && currentNote">hide steps</button>
+        <button ng-if="note.contributor==user.name" ng-click="deleteIt(note.id)" class="plain-button delete-button">DELETE</button>
+        <button class="rating-button" ng-click="rateIt(note.id)" tooltip="recommend"></button>
         <div class="note-rating">
             <div ng-if="note.rating>1">{{note.rating}} people found this helpful.</div>
             <div ng-if="note.rating==1">{{note.rating}} person found this helpful.</div>
             <div ng-if="note.rating<1">Not rated yet.</div>
         </div>
-        <div class="note-steps">
-            <div ng-if="notelist.length>=1 && !general" ng-class="{'first-note-step':notelist.length>=2}">Steps:{{notelist[0]}} </div>
-            <div ng-if="notelist.length>=2" ng-class="{'first-note-step':notelist.length>=3}">, {{notelist[1]}}</div>
-            <div ng-if="notelist.length>=3" ng-class="{'first-note-step':notelist.length>3}">, {{notelist[2]}}</div>
-            <div ng-if="notelist.length>3">+</div>
-            <div ng-if="notelist.length<1 && !general"> No Associated Step</div>
-            <div ng-if="general">General</div>
-        </div>
+
         <note ng-repeat="reply in note.replies" ng-if="note.replies.length > 0 && canShowNote(reply)" note="reply" delete-it = "deleteIt" rate-it = "rateIt" add-reply="addReply" can-show-note="canShowNote" baseline="baseline" show-list="showList" user="user" general="general" date="date" current-note="currentNote" notelist="noteList"></note>
     </div>
 </div>
