--- a/app/scripts/templates/note.html
+++ b/app/scripts/templates/note.html
@@ -4,12 +4,40 @@
     (note.category === 'details' && !baseline ? 'note-details' :
     (note.category === 'questions' && !baseline ? 'note-questions' :
     (note.category === 'other' && !baseline ? 'note-other' : 'baseline-content')))))">
-    <button ng-click="deleteIt(note.id)" class="plain-button delete-button">Delete</button>
-    <button class="rating-button" ng-click="rateIt(note.id)">^</button>
-    <div class="note-contributor">Submitted by {{note.contributor}} -</div>
+    <button class="plain-button show-step-button" ng-click="showList(note)" ng-if="!general && !currentNote">show steps</button>
+    <button class="plain-button show-step-button" ng-click="showList(note)" ng-if="!general && currentNote">hide steps</button>
+    <div class="note-steps">
+        <div ng-if="notelist.length>=1 && !general" >Steps: {{notelist}}</div>
+        <div ng-if="notelist.length<1 && !general"> No Associated Step</div>
+        <div ng-if="general">General</div>
+    </div>
+    <div ng-if="!baseline && note.category=='corrections'">
+        <div class="filter-icon filter-icon-corrections note-icon"></div>
+        <div class="note-contributor">Corrections•</div>
+    </div>
+    <div ng-if="!baseline && note.category=='methods'">
+        <div class="filter-icon filter-icon-methods note-icon"></div>
+        <div class="note-contributor">What is this?•</div>
+    </div>
+    <div ng-if="!baseline  && note.category=='details'">
+        <div class="filter-icon filter-icon-details note-icon"></div>
+        <div class="note-contributor">Tell Me More!•</div>
+    </div>
+    <div ng-if="!baseline && note.category=='questions'">
+        <div class="filter-icon filter-icon-questions note-icon"></div>
+        <div class="note-contributor">Questions•</div>
+    </div>
+    <div ng-if="!baseline && note.category=='other'">
+        <div class="filter-icon filter-icon-other note-icon"></div>
+        <div class="note-contributor">Other•</div>
+    </div>
+
+    <div class="note-contributor">Submitted by {{note.contributor}} </div>
     <div class="date">{{note.dateSubmitted}}<br></div>
-    <div ng-if="note.category === 'methods'">Note relevant for: {{note.extra_info}}</div>
-    <div ng-if="note.category === 'other'">Note category: {{note.extra_info}}</div>
+
+    <div class="note-content" ng-if="note.category === 'methods'">Note relevant for: {{note.extra_info}}</div>
+    <div class="note-content" ng-if="note.category === 'other'">Note category: {{note.extra_info}}</div>
+
     <div>{{note.content}}</div>
     <div class="comment-footer">
         <button class="plain-button reply-button"
@@ -22,10 +50,13 @@
             ng-if="baseline">
                 Reply
         </button>
+
+        <button ng-click="deleteIt(note.id)" class="plain-button delete-button">Delete</button>
+        <button class="rating-button" ng-click="rateIt(note.id)">^</button>
         <div class="note-rating" ng-if="note.rating!=0">
             <div ng-if="note.rating!=1">{{note.rating}} peoplee found this note helpful.</div>
             <div ng-if="note.rating==1">{{note.rating}} person found this note helpful.</div>
         </div>
-        <note ng-repeat="reply in note.replies" ng-if="note.replies.length > 0 && canShowNote(reply)" note="reply" delete-it = "deleteIt" rate-it = "rateIt" add-reply="addReply" can-show-note="canShowNote" baseline="baseline"></note>
+        <note ng-repeat="reply in note.replies" ng-if="note.replies.length > 0 && canShowNote(reply)" note="reply" delete-it = "deleteIt" rate-it = "rateIt" add-reply="addReply" can-show-note="canShowNote" baseline="baseline" user="user" general="general" date="date" current-note="currentNote" notelist="noteList"></note>
     </div>
 </div>
