--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -431,7 +431,7 @@ h2{
 }
 
 .rating-button {
-  //background-image: url(../images/PNG/thumbs-up.png);
+  background-image: url(../images/PNG/thumbs-up.png);
   background-position: 6px 0px;
   background-repeat: no-repeat;
   background-size: 20px;
