--- a/app/scripts/templates/note.html
+++ b/app/scripts/templates/note.html
@@ -4,8 +4,7 @@
     (note.category === 'details' && !baseline ? 'note-details' :
     (note.category === 'questions' && !baseline ? 'note-questions' :
     (note.category === 'other' && !baseline ? 'note-other' : 'baseline-content')))))">
-    <button class="plain-button show-step-button" ng-click="showList(note)" ng-if="!general && !currentNote">show steps</button>
-    <button class="plain-button show-step-button" ng-click="showList(note)" ng-if="!general && currentNote">hide steps</button>
+
     <div class="note-steps">
         <div ng-if="notelist.length>=1 && !general" >Steps: {{notelist}}</div>
         <div ng-if="notelist.length<1 && !general"> No Associated Step</div>
@@ -33,17 +32,17 @@
     </div>
 
     <div class="note-contributor">Submitted by {{note.contributor}} </div>
-    <div class="date">{{note.dateSubmitted}}<br></div>
+    <div class="date">{{date}}<br></div>
 
     <div class="note-content" ng-if="note.category === 'methods'">Note relevant for: {{note.extra_info}}</div>
     <div class="note-content" ng-if="note.category === 'other'">Note category: {{note.extra_info}}</div>
 
-    <div>{{note.content}}</div>
+    <div class="note-content">{{note.content}}</div>
     <div class="comment-footer">
         <button class="plain-button reply-button"
              ng-click="addReply($index, $event, note.id, note.contributor, note.step_id)"
              ng-if="note.category === 'questions' && !baseline">
-                Post Answer
+                Add Answer
         </button>
         <button class="plain-button reply-button"
             ng-click="addReply($index, $event, note.id, note.contributor, note.step_id)"
@@ -51,11 +50,12 @@
                 Reply
         </button>
 
-        <button ng-click="deleteIt(note.id)" class="plain-button delete-button">Delete</button>
-        <button class="rating-button" ng-click="rateIt(note.id)">^</button>
-        <div class="note-rating" ng-if="note.rating!=0">
-            <div ng-if="note.rating!=1">{{note.rating}} peoplee found this note helpful.</div>
-            <div ng-if="note.rating==1">{{note.rating}} person found this note helpful.</div>
+        <button ng-if="note.contributor==user.name" ng-click="deleteIt(note.id)" class="plain-button delete-button">DELETE</button>
+        <button class="rating-button" ng-click="rateIt(note.id)" tooltip="recommend"></button>
+        <div class="note-rating">
+            <div ng-if="note.rating>1">{{note.rating}} people found this helpful.</div>
+            <div ng-if="note.rating==1">{{note.rating}} person found this helpful.</div>
+            <div ng-if="note.rating<1">Not rated yet.</div>
         </div>
         <note ng-repeat="reply in note.replies" ng-if="note.replies.length > 0 && canShowNote(reply)" note="reply" delete-it = "deleteIt" rate-it = "rateIt" add-reply="addReply" can-show-note="canShowNote" baseline="baseline" user="user" general="general" date="date" current-note="currentNote" notelist="noteList"></note>
     </div>
