--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -471,7 +471,7 @@ img{
   }
 
   .close-button:hover {
-    text-decoration: underline black;
+    text-decoration: underline black;show-step-button:hover
   }
 
   .close-button-second {
@@ -585,7 +585,7 @@ img{
   }
 
   .menu-button:hover {
-    background-color: rgba(255, 192, 203, 0.76);
+    background-color: rgba(255, 192, 203, 0.76);show-step-button:hover
   }
   .show-step-button:hover {
     background-color: #e7e7e7;
