--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -43,6 +43,7 @@ img{
   line-height: 9px;
   width: 24px;
   position: relative;
+  margin-right:16%;
 }
 
 .selected, .icon:hover{border: 1px solid #e0e0e0;}
