small design fixes on icons

--- a/app/scripts/templates/note.html
+++ b/app/scripts/templates/note.html
@@ -31,7 +31,7 @@
         <div class="note-contributor">Other•</div>
     </div>
 
-    <div class="note-contributor">Submitted by {{note.contributor}} </div>
+    <div class="note-contributor">Submitted by {{note.contributor}}•</div>
     <div class="date">{{date}}<br></div>
 
     <div class="note-content" ng-if="note.category === 'methods'">Note relevant for: {{note.extra_info}}</div>
