--- a/app/scripts/templates/note.html
+++ b/app/scripts/templates/note.html
@@ -4,13 +4,13 @@
     (note.category === 'details' && !baseline ? 'note-details' :
     (note.category === 'questions' && !baseline ? 'note-questions' :
     (note.category === 'other' && !baseline ? 'note-other' : 'baseline-content')))))">
-    <button class="plain-button show-step-button" ng-click="showList(note)" ng-if="!general && !currentNote">show steps</button>
+    <!--<button class="plain-button show-step-button" ng-click="showList(note)" ng-if="!general && !currentNote">show steps</button>
     <button class="plain-button show-step-button" ng-click="showList(note)" ng-if="!general && currentNote">hide steps</button>
     <div class="note-steps">
         <div ng-if="notelist.length>=1 && !general" >Steps: {{notelist}}</div>
         <div ng-if="notelist.length<1 && !general"> No Associated Step</div>
         <div ng-if="general">General</div>
-    </div>
+    </div>-->
     <div ng-if="!baseline && note.category=='corrections'">
         <div class="filter-icon filter-icon-corrections note-icon"></div>
         <div class="note-contributor">Corrections•</div>
