--- a/app/scripts/templates/note.html
+++ b/app/scripts/templates/note.html
@@ -11,23 +11,23 @@
         <div ng-if="general">General</div>
     </div>
     <div ng-if="!baseline && note.category=='corrections'">
-        <div class="filter-icon filter-icon-corrections note-icon"></div>
+        <div class="filter-icon filter-icon-corrections note-icon" style="margin-top:5px"></div>
         <div class="note-contributor">Corrections•</div>
     </div>
     <div ng-if="!baseline && note.category=='methods'">
-        <div class="filter-icon filter-icon-methods note-icon"></div>
+        <div class="filter-icon filter-icon-methods note-icon" style="margin-top:5px"></div>
         <div class="note-contributor">What is this?•</div>
     </div>
     <div ng-if="!baseline  && note.category=='details'">
-        <div class="filter-icon filter-icon-details note-icon"></div>
+        <div class="filter-icon filter-icon-details note-icon" style="margin-top:5px"></div>
         <div class="note-contributor">Tell Me More!•</div>
     </div>
     <div ng-if="!baseline && note.category=='questions'">
-        <div class="filter-icon filter-icon-questions note-icon"></div>
+        <div class="filter-icon filter-icon-questions note-icon" style="margin-top:5px"></div>
         <div class="note-contributor">Questions•</div>
     </div>
-    <div ng-if="!baseline && note.category=='other'">
-        <div class="filter-icon filter-icon-other note-icon"></div>
+    <div ng-if="!baseline && note.category=='other'"" style="margin-top:5px">
+        <div class="filter-icon filter-icon-other note-icon" style="margin-top:5px"></div>
         <div class="note-contributor">Other•</div>
     </div>
 
