--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -48,23 +48,7 @@ img{
   position: relative;
 }
 
-.filter-icon{
-  background-repeat: no-repeat;
-  background-size: 14px;
-  outline:none;
-  border-radius: 20px;
-  height: 15px;
-  line-height: 9px;
-  width: 15px;
-  position: relative;
-}
-
-.filter-icon:hover{
-  border:none;//border: 1px solid #fff;
-}
-
 .selected, .icon:hover{border:none;}
-//.icon:fnote-contentocus {outline:0;}
 
 [tooltip]:before {
   content : attr(tooltip);
@@ -88,89 +72,6 @@ img{
   white-space: nowrap;
 }
 
-.selected-step {
-  background-color: rgb(128, 46, 255);
-}
-
-
-.note-icon{
-  float:left;
-}
-
-  .icon-details {
-    background-image: url(../images/PNG/pin.png);
-    background-size: 17px;
-    background-position: 3px 3px;
-  }
-
-  .icon-corrections {
-    background-image: url(../images/PNG/healing.png);
-    background-position: 3px;
-  }
-
-  .icon-methods {
-    background-image: url(../images/PNG/method.png);
-    background-size: 14px;
-    background-position: 4px 3px;
-  }
-
-  .icon-questions {
-    background-image: url(../images/PNG/question.png);
-    background-size: 14px;
-    background-position: 4px 3px;
-  }
-
-  .icon-other {
-    background-image: url(../images/PNG/other.png);
-    background-size: 23px;
-    background-position: 0px 2px;
-  }
-
-  .filter-icon-details {
-    background-image: url(../images/PNG/pin.png);
-    background-size: 14px;
-    //background-position: 0px 0px;
-  }
-  .filter-icon-corrections {
-    background-image: url(../images/PNG/healing.png);
-    //background-position: 0px;
-  }
-
-  .filter-icon-methods {
-    background-image: url(../images/PNG/method.png);
-    background-size: 13px;
-    //background-position: 0px 0px;
-  }
-
-  .filter-icon-questions {
-    background-image: url(../images/PNG/question.png);
-    background-size: 13px;
-    //background-position: 0px 0px;
-  }
-
-  .filter-icon-other {
-    background-image: url(../images/PNG/other.png);
-    background-size: 17px;
-    //background-position: 0px 0px;
-  }
-
-  .selected-details, .note-details, .filter-icon-details:hover, .icon-details:hover {
-    background-color: #f2e1ff;
-  }
-  .selected-corrections, .note-corrections, .filter-icon-corrections:hover, .icon-corrections:hover {
-    background-color:#f2e1ff;
-    z-index: 1;
-  }
-  .selected-methods, .note-methods, .filter-icon-methods:hover, .icon-methods:hover {
-    background-color: #f2e1ff;
-  }
-  .selected-questions, .note-questions, .filter-icon-questions:hover, .icon-questions:hover {
-    background-color: #f2e1ff;
-  }
-  .selected-other, .note-other, .filter-icon-other:hover, .icon-other:hover {
-    background-color: #f2e1ff
-  }
-
   .note:before {
     background-color: #fff;
     background-repeat: no-repeat;
@@ -190,12 +91,7 @@ img{
     padding-right: 3px;
     clear: both;
     border-radius: 2px;
-  }
-
-  .dropdown {
-    padding: 0px 3px;
-    margin: 0px 10px;
-    line-height: 24px;
+    background-color: #f2e1ff;
   }
 
   .note-contributor {
@@ -205,29 +101,18 @@ img{
     float: left;
   }
 
-  .input-start {
-    background-color: #fff;
-    background-image: url(../images/PNG/tag-add-white.png);
-    background-size: 22px;
-    background-position: 4px 3px;
-    height: 30px;
-
-    position: absolute;
-    width: 30px;
-  }
-
-  .input-start:hover {
-    background-color: #f5f5f5;
-  }
-
   .input-container {
-    background-color: #fff;
-    border: 1px solid #949494;
+    background-color: rgb(255, 253, 230);
+    border: 1px solid rgb(219, 217, 199);
+    border-top:none;
     font-size: 0.9em;
     margin: 0 0 0 500px;
     padding: 5px;
     position: fixed;
     overflow-y: auto;
+    top:71%;
+    right:20px;
+    height:25%;
   }
 
   .note-container {
@@ -240,10 +125,10 @@ img{
     position: fixed;
     right: 20px;
     top: 10%;
-    height: 81%;
+    height: 61%;
   }
 
-  .filter-container {
+  .sort-container {
     border: 1px solid rgb(219, 217, 199);
     border-bottom: none;
     padding: 5px;
@@ -258,10 +143,6 @@ img{
     right: 20px;
   }
 
-  .filter {
-    right: 20px;
-    float: right;
-  }
   .description {
     border: 1px #ccc dotted;
     margin: 5px 0;
@@ -274,6 +155,7 @@ img{
 
   .input-text {
     width: 100%;
+    background-color: white;
   }
 
   .plain-button {
@@ -298,18 +180,6 @@ img{
     line-height: 15px;
   }
 
-  .baseline-container {
-    background-color: #fff;
-    border: 1px solid #9b9b9b;
-    margin: 44px 0 0 -10px;
-    overflow-y: auto;
-    padding: 10px;
-    position: fixed;
-
-    h2 {
-      margin: 0 10px;
-    }
-  }
 
   .baseline-content {
     background-color: #fff;
@@ -341,7 +211,7 @@ img{
   .contributors-plus {
     background-image: url(../images/PNG/plus.png);
     background-position: 5px 5px;
-    float: left;//border: 1px solid #fff; 0.33);}
+    float: left;
     background-repeat: no-repeat;
     background-size: 15.3px;
     border: 1px solid #fff;
@@ -350,7 +220,7 @@ img{
     line-height: 9px;
     width: 24px;
     margin-right: 4px;
-  }//border: 1px solid #fff; 0.33);}
+  }
 
   .contributors-minus {
     background-image: url(../images/PNG/minus.png);
@@ -380,7 +250,7 @@ img{
     color: #333666;
   }
 
-  .tutorial-title {//border: 1px solid #fff; 0.33);}
+  .tutorial-title {
     font-size: 30px;
   }
 
@@ -395,23 +265,6 @@ img{
     color: darkgrey;
   }
 
-  .note-number {
-    text-align: left;
-    font-size: medium;
-  }
-
-  .icon__number {
-    background-color: lightsteelblue;
-    border-radius: 50%;
-    color: black;
-    padding: 2px;
-    margin: 2px 2px;
-    font-size: 10px;
-    position: absolute;
-    right: -5px;
-    top: -8px;
-  }
-
   .window-title {
     font-weight: bold;
     color: darkgrey;
@@ -419,25 +272,10 @@ img{
     float: left;
   }
 
-  .categories-title {
-    margin-left: 30px;
-  }
-
-  .selected-steps {
-    font-weight: bold;
-    color: #4c4c4c;
-    padding-left: 15px;
-    position: absolute;
-    outline: none;
-    float: left;
-    clear: right;
-    margin-bottom: 2px;//border: 1px solid #fff; 0.33);}
-    font-size: 0.8em
-  }
-
   .delete-button {
     background: rgba(255, 0, 21, 0.57);
-    margin: 3px 10px;
+    margin: 0px 10px;
+    margin-top:4.5px;
     font-size: 0.6em;
     float: right;
     color: white;
@@ -450,50 +288,11 @@ img{
     background: #ff0700;
   }
 
-  .close-button {
-    font-size: 0.8em;
-    float: right;
-  }
-
-  .reply-close {
-    float: right;
-    margin-bottom: 20px;
-  }
-
-  .return-button-first {
-    margin-left: 50%;
-  }
-
-  .return-button-second {
-    margin-left: 52%;
-  }
-
-  .close-button:hover {
-    text-decoration: underline black;show-step-button:hover
-  }
-
-  .close-button-second {
-    margin-right: 3.4%;
-  }
-
-  .return-button {
-    font-size: 0.8em;
-  }
-
-  .return-button:hover {
-    text-decoration: underline black;
-  }
 
   .note-rating {
     font-size: 0.6em;
     text-align: left;
     margin-right: 15px;
-  }
-
-  .note-steps {
-    font-size: 0.6em;
-    float: right;
-    margin-right: 10px;
   }
 
   .rating-button {
@@ -506,123 +305,12 @@ img{
     width: 35px;
     float: left;
   }
-
-  .step-list {
-    border-top: 1px solid #e6e6e6;
-    padding: 2px 0px;
-    padding-left: 15px;
-    text-align: left;
-    font-weight: bold;
-    color: grey;
-  }
-
-  .disabled-steps {
-    background-color: #cccccc;
-  }
-
-  .menu-action-button {
-    float: right;
-    border-left: 2px solid #e6e6e6;
-    outline: none;
-  }
-
-  .plus-action-button {
-    padding: 2px 10px;
-  }
-
-  .minus-action-button {
-    padding: 2px 12px;
-  }
-
-  .menu-action-button:hover {
-    background-color: #e6d4e2;
-  }
-
-  .menu-action-button:disabled {
-    background-color: #cccccc;
-  }
-
-  .selected-menu-button {
-    background-color: #e6d4e2;
-  }
-
-  .menu-button {
-    background-repeat: no-repeat;
-    background-size: 10px;
-    height: 20px;
-    line-height: 9px;
-    width: 10px;
-  }
-
-  .icon-bar {
-    margin: 3px 10px;
-  }
-
-  .preview-button {
-    background-image: url(../images/PNG/eye.png);
-    background-position: 6px 3px;
-    background-repeat: no-repeat;
-    background-size: 20px;
-    height: 28px;
-    line-height: 9px;
-    width: 35px;
-  }
-
-  .menu-one {
-    background-image: url(../images/PNG/arrow.png);
-    background-position: 0px 0px;
-    margin-right: 10px;
-    float: right;
-  }
-
-  .menu-two {
-    background-image: url(../images/PNG/arrow2.png);
-    background-position: 0px 2px;
-    margin-right: 20px;
-    float: left;
-  }
-
-  .menu-button:hover {
-    background-color: rgba(255, 192, 203, 0.76);show-step-button:hover
-  }
-  .show-step-button:hover {
-    background-color: #e7e7e7;
-  }
-
+  
   .date {
     font-size: 0.6em;
   }
 
-  .filter-title {
-    float: left;
-  }
-
-  .filter-section-title {
-    margin-right: 10px;
-  }
 
   .note-display {
     margin-left: 10px;
-  }
-
-  .filter-button {
-    border-radius: 2px;
-    font-size: 0.6em;
-    background-color: white;
-    line-height: 15px;
-    margin-right: 20px;
-    margin-top: 5px;
-  }
-  .filter-button:hover {
-    background-color: #e3e3e3;
-  }
-
-  .show-step-button {
-    float: right;
-    margin-top: 3px;
-    font-size: 0.6em;
-    border-radius: 3px;
-    background-color: white;
-    outline: none;
-    line-height: 15px;
   }
