--- a/app/scripts/templates/note.html
+++ b/app/scripts/templates/note.html
@@ -1,37 +1,4 @@
-<div class="note" ng-class="
-    (note.category === 'corrections' && !baseline ? 'note-corrections' :
-    (note.category === 'methods' && !baseline ? 'note-methods' :
-    (note.category === 'details' && !baseline ? 'note-details' :
-    (note.category === 'questions' && !baseline ? 'note-questions' :
-    (note.category === 'other' && !baseline ? 'note-other' : 'baseline-content')))))">
-    <!--<button class="plain-button show-step-button" ng-click="showList(note)" ng-if="!general && !currentNote">show steps</button>
-    <button class="plain-button show-step-button" ng-click="showList(note)" ng-if="!general && currentNote">hide steps</button>
-    <div class="note-steps">
-        <div ng-if="notelist.length>=1 && !general" >Steps: {{notelist}}</div>
-        <div ng-if="notelist.length<1 && !general"> No Associated Step</div>
-        <div ng-if="general">General</div>
-    </div>
-    <div ng-if="!baseline && note.category=='corrections'">
-        <div class="filter-icon filter-icon-corrections note-icon"></div>
-        <div class="note-contributor">Corrections•</div>
-    </div>
-    <div ng-if="!baseline && note.category=='methods'">
-        <div class="filter-icon filter-icon-methods note-icon"></div>
-         <div class="note-contributor">What is this?•</div>
-    </div>
-    <div ng-if="!baseline  && note.category=='details'">
-        <div class="filter-icon filter-icon-details note-icon"></div>
-        <div class="note-contributor">Tell Me More!•</div>
-    </div>
-    <div ng-if="!baseline && note.category=='questions'">
-        <div class="filter-icon filter-icon-questions note-icon"></div>
-        <div class="note-contributor">Questions•</div>
-    </div>
-    <div ng-if="!baseline && note.category=='other'">
-        <div class="filter-icon filter-icon-other note-icon"></div>
-        <div class="note-contributor">Other•</div>
-    </div>-->
-
+<div class="note" >
     <div class="note-contributor">Submitted by {{note.contributor}}•</div>
     <div class="date">{{date}}<br></div>
     <div class="note-content" ng-if="note.category === 'methods'">Note relevant for: {{note.extra_info}}</div>
