more cleaning of code..

--- a/app/scripts/templates/note.html
+++ b/app/scripts/templates/note.html
@@ -24,6 +24,6 @@
             <div ng-if="note.rating<1">Not rated yet.</div>
         </div>
 
-        <note ng-repeat="reply in note.replies" ng-if="note.replies.length > 0 && canShowNote(reply)" note="reply" delete-it = "deleteIt" rate-it = "rateIt" add-reply="addReply" can-show-note="canShowNote" baseline="baseline" show-list="showList" user="user" general="general" date="date" current-note="currentNote" notelist="noteList"></note>
+        <note ng-repeat="reply in note.replies" ng-if="note.replies.length > 0 && canShowNote(reply)" note="reply" delete-it = "deleteIt" rate-it = "rateIt" add-reply="addReply" can-show-note="canShowNote" user="user" date="date"></note>
     </div>
 </div>
