--- a/app/scripts/templates/note.html
+++ b/app/scripts/templates/note.html
@@ -1,9 +1,8 @@
 <div class="note" ng-class="
     (note.category === 'corrections' && !baseline ? 'note-corrections' :
-    (note.category === 'methods' && !baseline ? 'note-methods' :
     (note.category === 'details' && !baseline ? 'note-details' :
     (note.category === 'questions' && !baseline ? 'note-questions' :
-    (note.category === 'other' && !baseline ? 'note-other' : 'baseline-content')))))">
+    (note.category === 'other' && !baseline ? 'note-other' : 'baseline-content'))))">
     <button class="plain-button show-step-button" ng-click="showList(note)" ng-if="!general && !currentNote">show steps</button>
     <button class="plain-button show-step-button" ng-click="showList(note)" ng-if="!general && currentNote">hide steps</button>
     <div class="note-steps">
@@ -14,10 +13,6 @@
     <div ng-if="!baseline && note.category=='corrections'">
         <div class="filter-icon filter-icon-corrections note-icon" style="margin-top:5px"></div>
         <div class="note-contributor">Corrections•</div>
-    </div>
-    <div ng-if="!baseline && note.category=='methods'">
-        <div class="filter-icon filter-icon-methods note-icon"style="margin-top:5px"></div>
-         <div class="note-contributor">What is this?•</div>
     </div>
     <div ng-if="!baseline  && note.category=='details'">
         <div class="filter-icon filter-icon-details note-icon" style="margin-top:5px"></div>
@@ -34,7 +29,6 @@
 
     <div class="note-contributor">Submitted by {{note.contributor}}•</div>
     <div class="date">{{date}}<br></div>
-    <div class="note-content" ng-if="note.category === 'methods'">Note relevant for: {{note.extra_info}}</div>
     <div class="note-content" ng-if="note.category === 'other'">Note category: {{note.extra_info}}</div>
     <div class="note-content">{{note.content}}</div>
     <div class="comment-footer">
