--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -70,7 +70,7 @@ img{
   white-space: nowrap;
 }
 
-.selected-step{background-color: #f6ffa4;}
+.selected-step{background-color: #ffe3fd;}
 
 .icon-details{
   background-image: url(../images/PNG/pin.png);
@@ -96,18 +96,18 @@ img{
 }
 
 .selected-details, .note-details,.icon-details:hover {
-  background-color: #DEE9FF;
+  background-color: #d0e7ff;
 }
 .selected-corrections, .note-corrections, .icon-corrections:hover {
-  background-color: #fdafd9;
+  background-color: #f5dcfd;
   z-index: 1;
 }
 
 .selected-questions, .note-questions, .icon-questions:hover {
-  background-color: #edbcf9;
+  background-color:lightyellow;
 }
 .selected-other, .note-other, .icon-other:hover {
-  background-color: #d4ffd1;
+  background-color: #dcffe5;
 }
 
 .note:before{
