--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -215,7 +215,7 @@ img{
   }
 
   .contributors-show {
-    background-image: url(../images/PNG/arrow2.png);
+    background-image: url(../images/PNG/arrow-down.png);
     background-position: 5px 5px;
     float: left;
     background-repeat: no-repeat;
@@ -229,7 +229,7 @@ img{
   }
 
   .contributors-hide {
-    background-image: url(../images/PNG/arrow.png);
+    background-image: url(../images/PNG/arrow-up.png);
     background-position: 5px 5px;
     float: left;
     background-repeat: no-repeat;
