--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -191,7 +191,7 @@ img{
 
   .input-start {
     background-color: #fff;
-    background-image: url(../images/PNG/tag-add-white.png);
+    background-image: url(../images/SVG/addNoteSquare.svg);
     background-size: 22px;
     background-position: 4px 3px;
     height: 30px;
