--- a/app/scripts/templates/note.html
+++ b/app/scripts/templates/note.html
@@ -31,7 +31,7 @@
     </div>
 
     <div class="note-contributor">Submitted by {{note.contributor}}•</div>
-    <div class="date">{{date}}</div><br>
+    <div class="date">{{date}}</div>
 
     <div class="note-content" ng-if="note.category === 'methods'">Note relevant for: {{note.extra_info}}</div>
     <div class="note-content" ng-if="note.category === 'other'">Note category: {{note.extra_info}}</div>
